crates/formatter/tests/snapshots/snapshots__fixtures__000104_lifecycle.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Set lifecycle_state to enum value not available in previous migration.
update workspace_agents
set lifecycle_state = 'off'
where id = '7a1ce5f8-8d00-431c-ad1b-97a846512804';
