crates/formatter/tests/snapshots/snapshots__fixtures__000110_workspace_agent_startup_logs.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into workspace_agent_startup_logs (agent_id, created_at, output)
values ('45e89705-e09d-4850-bcec-f9a937f5d78d', NOW(), 'output');
