crates/formatter/tests/snapshots/snapshots__fixtures__000187_jfrog_xray.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into jfrog_xray_scans (
	workspace_id,
	agent_id,
	critical,
	high,
	medium,
	results_url
)
values
	(
		'b90547be-8870-4d68-8184-e8b2242b7c01',
		'8fa17bbd-c48c-44c7-91ae-d4acbc755fad',
		10,
		5,
		2,
		'https://hello-world'
	);
