crates/formatter/tests/snapshots/snapshots__fixtures__000195_oauth2_provider_codes.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into oauth2_provider_app_codes (
	id,
	created_at,
	expires_at,
	secret_prefix,
	hashed_secret,
	user_id,
	app_id
)
values
	(
		'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:23:54+00',
		'2023-06-15 10:23:54+00',
		cast ('abcdefg' as bytea),
		cast ('abcdefg' as bytea),
		'0ed9befc-4911-4ccf-a8e2-559bf72daa94',
		'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11'
	);

insert into oauth2_provider_app_tokens (
	id,
	created_at,
	expires_at,
	hash_prefix,
	refresh_hash,
	app_secret_id,
	api_key_id
)
values
	(
		'd0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:25:33+00',
		'2023-12-15 11:40:20+00',
		cast ('gfedcba' as bytea),
		cast ('abcdefg' as bytea),
		'b0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'peuLZhMXt4'
	);
